--- a/index.html
+++ b/index.html
@@ -92,7 +92,75 @@
                 <li class="list-group-item"><strong>Adresse :</strong> 42330 Cuzieu</li>
                 <li class="list-group-item"><strong>Permis :</strong> B + véhiculé</li>
             </ul>
-        </section>
+    </section>
+    <section class="mt-4">
+        <h2 class="section-header">Compétences et Aptitudes</h2>
+        <div class="container text-center">
+            <div class="row align-items-start">
+                <div class="col">
+                    <h3>Compétences :</h3>
+                    <ul class="list-group">
+                        <li class="list-group-item">Maîtrise des logiciels bureautiques</li>
+                        <li class="list-group-item">Stocker et organiser des données</li>
+                        <li class="list-group-item">Aide à la prise en main d’un ordinateur</li>
+                        <li class="list-group-item">Connexion d’imprimantes et périphériques en Bluetooth</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Aptitudes :</h3>
+                    <ul class="list-group">
+                        <li class="list-group-item">Connaissance et respect des règles</li>
+                        <li class="list-group-item">Travail en équipe</li>
+                        <li class="list-group-item">Curiosité</li>
+                        <li class="list-group-item">Sérieuse</li>
+                        <li class="list-group-item">Ponctuelle</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="mt-4">
+    <h2 class="section-header">Langues et Centres d'intérêt</h2>
+    <div class="row">
+        <div class="col-md-6">
+            <h3>Langues :</h3>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <strong>Anglais :</strong> Niveau moyen<br>
+                    <small>Capable de lire des documents techniques et de tenir une conversation simple.</small>
+                </li>
+                <li class="list-group-item">
+                    <strong>Espagnol :</strong> Niveau débutant<br>
+                    <small>Notions de base pour les conversations courantes.</small>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-6">
+            <h3>Centres d'intérêt :</h3>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <i class="fas fa-laptop"></i> Informatique
+                </li>
+                <li class="list-group-item">
+                    <i class="fas fa-plane"></i> Voyages
+                </li>
+                <li class="list-group-item">
+                    <i class="fas fa-users"></i> Moments en famille et amis
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+     <section class="mt-4">
+        <h2 class="section-header">Expériences Professionnelles</h2>
+        <ul class="list-group">
+            <li class="list-group-item"><strong>Agent de soins (ASHQ)</strong> - EPHAD à Chazelles-sur-Lyon<br><em>01 août 2023 - 31 août 2024</em></li>
+            <li class="list-group-item"><strong>Agent de soins (ASHQ)</strong> - Hôpital Maurice André Saint Galmier<br><em>Juillet - Août 2022</em></li>
+            <li class="list-group-item"><strong>Employée Libre-Service (Intérim)</strong> - Casino (Mise en rayon)<br><em>Août 2021</em></li>
+            <li class="list-group-item"><strong>Inventoriste (Intérim)</strong> - Casino (Inventaire)<br><em>Août 2021</em></li>
+            <li class="list-group-item"><strong>Agent de propreté</strong> - Jolibois Gaelle, Saint-Galmier<br><em>Juillet - Août 2021</em></li>
+        </ul>
+ </section>
 
         <section class="mt-4">
             <h2 class="section-header">Formation</h2>
