--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
                         <li class="list-group-item">Travail en équipe</li>
                         <li class="list-group-item">Curiosité</li>
                         <li class="list-group-item">Sérieuse</li>
-                        <li class="list-group-item">Ponctuelle</li>
+                        <li class="list-group-item">Ponctualité</li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
     <section class="mt-4">
-    <h2 class="section-header">Langues et Centres d'intérêt</h2>
+    <h2 class="section-header">Langues et Centres d'intérêts</h2>
     <div class="row">
         <div class="col-md-6">
             <h3>Langues :</h3>
@@ -136,7 +136,7 @@
             </ul>
         </div>
         <div class="col-md-6">
-            <h3>Centres d'intérêt :</h3>
+            <h3>Centres d'intérêts :</h3>
             <ul class="list-group">
                 <li class="list-group-item">
                     <i class="fas fa-laptop"></i> Informatique
@@ -151,16 +151,19 @@
         </div>
     </div>
 </section>
-     <section class="mt-4">
-        <h2 class="section-header">Expériences Professionnelles</h2>
-        <ul class="list-group">
-            <li class="list-group-item"><strong>Agent de soins (ASHQ)</strong> - EPHAD à Chazelles-sur-Lyon<br><em>01 août 2023 - 31 août 2024</em></li>
-            <li class="list-group-item"><strong>Agent de soins (ASHQ)</strong> - Hôpital Maurice André Saint Galmier<br><em>Juillet - Août 2022</em></li>
-            <li class="list-group-item"><strong>Employée Libre-Service (Intérim)</strong> - Casino (Mise en rayon)<br><em>Août 2021</em></li>
-            <li class="list-group-item"><strong>Inventoriste (Intérim)</strong> - Casino (Inventaire)<br><em>Août 2021</em></li>
-            <li class="list-group-item"><strong>Agent de propreté</strong> - Jolibois Gaelle, Saint-Galmier<br><em>Juillet - Août 2021</em></li>
-        </ul>
- </section>
+<section class="mt-4">
+   <h2 class="section-header">Expériences Professionnelles</h2>
+   <ul class="list-group">
+       <li class="list-group-item"><strong>Agent de soins (ASHQ)</strong> - EPHAD à Chazelles-sur-Lyon<br>
+       <em>01 août 2023 - 31 août 2024</em></li>
+       <li class="list-group-item"><strong>Agent de soins (ASHQ)</strong> - Hôpital Maurice André Saint Galmier<br>
+       <em>Juillet - Août 2022</em></li>
+       <li class="list-group-item"><strong>Employée Libre-Service (Intérim)</strong> - Casino (Mise en rayon)<br>
+       <em>Août 2021</em></li>
+       <li class="list-group-item"><strong>Inventoriste (Intérim)</strong> - Casino (Inventaire)<br><em>Août 2021</em></li>
+       <li class="list-group-item"><strong>Agent de propreté</strong> - Jolibois Gaelle, Saint-Galmier<br><em>Juillet - Août 2021</em></li>
+   </ul>
+</section>
 
         <section class="mt-4">
             <h2 class="section-header">Formation</h2>
