--- a/index.html
+++ b/index.html
@@ -152,17 +152,29 @@
     </div>
 </section>
 <section class="mt-4">
-   <h2 class="section-header">Expériences Professionnelles</h2>
-   <ul class="list-group">
-       <li class="list-group-item"><strong>Agent de soins (ASHQ)</strong> - EPHAD à Chazelles-sur-Lyon<br>
-       <em>01 août 2023 - 31 août 2024</em></li>
-       <li class="list-group-item"><strong>Agent de soins (ASHQ)</strong> - Hôpital Maurice André Saint Galmier<br>
-       <em>Juillet - Août 2022</em></li>
-       <li class="list-group-item"><strong>Employée Libre-Service (Intérim)</strong> - Casino (Mise en rayon)<br>
-       <em>Août 2021</em></li>
-       <li class="list-group-item"><strong>Inventoriste (Intérim)</strong> - Casino (Inventaire)<br><em>Août 2021</em></li>
-       <li class="list-group-item"><strong>Agent de propreté</strong> - Jolibois Gaelle, Saint-Galmier<br><em>Juillet - Août 2021</em></li>
-   </ul>
+    <h2 class="section-header">Expériences professionnelles</h2>
+    <ul class="list-group">
+        <li class="list-group-item">
+            <strong>Agent de soins (ASHQ)</strong> - EPHAD de Chazelles-sur-Lyon<br>
+            <em>01 août 2023 - 31 août 2024</em>
+        </li>
+        <li class="list-group-item">
+            <strong>Agent de soins (ASHQ)</strong> - Hôpital Maurice André, Saint-Galmier<br>
+            <em>Juillet - Août 2022</em>
+        </li>
+        <li class="list-group-item">
+            <strong>Employée Libre-Service (Intérim)</strong> - Casino (Mise en rayon)<br>
+            <em>Août 2021</em>
+        </li>
+        <li class="list-group-item">
+            <strong>Inventoriste (Intérim)</strong> - Casino (Inventaire)<br>
+            <em>Août 2021</em>
+        </li>
+        <li class="list-group-item">
+            <strong>Agent de propreté</strong> - Jolibois Gaëlle, Saint-Galmier<br>
+            <em>Juillet - Août 2021</em>
+        </li>
+    </ul>
 </section>
 
         <section class="mt-4">
