--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Marie Philippon, CV informatique, BTS SIO, option SIRS, Solutions d’Infrastructure, Systèmes et Réseaux, compétences IT, gestion réseaux, alternance IT, informatique, réseau, étudiant BTS, IT support, infrastructure réseau">
     <meta name="author" content="Marie Philippon">
     <title>Marie Philippon | CV Professionnel - BTS SIO option SIRS</title>
-    
+
     <link rel="preload" href="styles.css" as="style">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style">
     <link rel="preload" href="https://fonts.gstatic.com" as="font" type="font/woff2" crossorigin="anonymous">
@@ -77,7 +77,7 @@
 
         <section class="mt-4">
             <h2 class="section-header">À propos de moi</h2>
-            <p>Étudiante en BTS SIO option SIRS, je suis passionnée par les systèmes et réseaux informatiques. Sérieuse et curieuse, je m'efforce d'apprendre et d’appliquer mes connaissances pour résoudre des problèmes techniques.</p>
+            <p>Je suis étudiante en BTS Services Informatiques aux Organisations option SIRS, je suis passionnée par les systèmes et réseaux informatiques. Sérieuse et curieuse, je m'efforce d'apprendre et d’appliquer mes connaissances pour résoudre des problèmes techniques.</p>
         </section>
 
         <section class="mt-4">
