--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="<meta name="description" content="Découvrez le CV de Marie Philippon, étudiante en BTS SIO (Systèmes & Réseaux). Marie possède des compétences solides en informatique, gestion de réseaux, maintenance et support technique. Motivée et passionnée, elle cherche à mettre ses compétences au service de projets ambitieux.">
+    <meta name="description" content="Découvrez le CV de Marie Philippon, étudiante en BTS SIO (Systèmes & Réseaux). Marie possède des compétences solides en informatique, gestion de réseaux, maintenance et support technique. Motivée et passionnée, elle cherche à mettre ses compétences au service de projets ambitieux.">
     <meta name="keywords" content="Marie Philippon, CV informatique, BTS SIO, option SIRS, Solutions d’Infrastructure, Systèmes et Réseaux, compétences IT, gestion réseaux, alternance IT, informatique, réseau, étudiant BTS, IT support, infrastructure réseau">
     <meta name="author" content="Marie Philippon">
     <title>Marie Philippon | Curriculum vitae Professionnel - BTS SIO option SIRS</title>
